# codecell

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint-test.yml  release.yml
codecell/: __init__.py  _ipc_bootstrap.py  _runtime.py  _types.py
codecell/bash/: __init__.py  _validator.py
codecell/python/: __init__.py  _validator.py
tests/: test_codecell.py  test_ipc_runtime.py
